# rs-asset-mgmt

./: Cargo.toml
data/: db.json
src/: db.rs  fetch.rs  main.rs  start.rs  zip.rs
src/db/: model.rs
