[package]
name = "rs-cli-asset-mgmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm =  {version = "^0.23", features = [ "serde" ] }
serde = {version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
rand = { version = "^0.7.3", default-features = false, features = ["std"] }
tui = { version = "^0.18", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "^1.0"
git2 = "^0.15"
zip = "^0.6.2"
tempfile = "^3.3.0"
reqwest = { version = "^0.11.11", features = ["stream"]}
futures-util = "^0.3.21"
tokio = {version = "^1", features = ["full"] }

